Updates to structuce, created main.js file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
 
         <div class="row banner">
             <div class="banner-text">
-                <h1 class="responsive-headline">Hi, I'm Gwyn</h1>
+                <h1 class="responsive-headline">Hi, I'm Dion Medley</h1>
 
                 <p>and this page has been viewed <a id="counter"></a> times :) </p>
                 <ul class="social">
@@ -91,12 +91,12 @@
 
                 <h2>ABOUT ME</h2>
 
-                <p>Hi, I'm Dion M Medley, <span> Lenovo Premeier Warranty Technician</span></p> at <a href="https://lenovo.com">Lenovo</a>. I work directly with end-user to troubleshoot their Lenovo computer and Software while maintina great customer service.</p>
+                <p>Hi, I'm Dion M Medley, <span> Lenovo Premeier Warranty Technician</span><a href="https://lenovo.com">Lenovo</a>.</p> I work directly with end-user to troubleshoot their Lenovo computer and Software while maintina great customer service.</p>
 
 
             </br>
         </br>
-        I built this page as part of the <span><a href=""></a></span>    
+        I created this website as part of my portfolio to demonstrate my proficiency in HTML and cloud technologies. This site provides access to my projects on GitHub and links to my social media profiles. <span><a href=""></a></span>    
 
 
             </div>
@@ -125,10 +125,13 @@
                     <div class="twelve columns">
 
                         <h3>Lenovo</h3>
-                        <p class="info">Lenovo Premier Technician<span>&bull;</span></p>
+                        <p class="info">Lenovo Premier Technician<span>&bull;</span>Nov 2023 - Current</p>
 
                         <p>
-                        <li>lenovo premier job listing</li>
+                            <li>Provide tech support to Lenovo customers, solving hardware and software issues.</li>
+                            <li>Communicate technical details in simple terms for end-users.</li>
+                            <li>Work with Level 2 engineers and account managers to resolve escalations.</li>
+                            <li>Give feedback on recurring issues to teammates and engineers.</li>
                         </p>
 
                     </div>
@@ -139,7 +142,7 @@
                     <div class="twelve columns">
 
                         <h3>National Rural Telecommunications Cooperative</h3>
-                        <p class="info">Advanced Technician<span>&bull;</span></p>
+                        <p class="info">Advanced Technician<span>&bull;</span>Mar 2021 - Nov 2022</p>
 
                         <p>
                         <li>Answer inbound technical support phone calls, chats and emails related to NRTC Managed Services&#39;
@@ -164,7 +167,7 @@
                     <div class="twelve columns">
 
                         <h3>Arise Company LLC</h3>
-                        <p class="info">computer Technician<span>&bull;</span></p>
+                        <p class="info">Computer Technician<span>&bull;</span>Mar 2019 - Aug 2023</p>
 
                         <p>
                             <li> Respond to customers’ complaints and suggestions in accordance with company policy.</li>
@@ -213,6 +216,7 @@
                 </div>
             </div>
         </div>
+        ß
     </section>
 
         </div>
