--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
 
                 <h2>ABOUT ME</h2>
 
-                <p>Hi, I'm Dion M Medley, <span> Lenovo Premeier Warranty Technician</span><a href="https://lenovo.com">Lenovo</a>.</p> I work directly with end-user to troubleshoot their Lenovo computer and Software while maintina great customer service.</p>
+                <p>Hi, I'm Dion M Medley, <span> Lenovo Premeier Warranty Technician </span><a href="https://lenovo.com"> Lenovo</a>.</p> I work directly with end-user to troubleshoot their Lenovo computer and Software while maintina great customer service.</p>
 
 
             </br>
@@ -132,6 +132,7 @@
                             <li>Communicate technical details in simple terms for end-users.</li>
                             <li>Work with Level 2 engineers and account managers to resolve escalations.</li>
                             <li>Give feedback on recurring issues to teammates and engineers.</li>
+
                         </p>
 
                     </div>
@@ -209,7 +210,9 @@
                         <li> Network Support</li>
                         <li>A/V Setup</li>
                         <li>Remote office software</li>
-                        <li>3 years working with Python, Swift, Html</li>
+                        <li>Python, Swift, Html</li>
+                        <li> Microsoft Dynamics 365</li>
+                        <li>Microsoft Power BI</li>
                         
                         </p>
                     </div>
