--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-
+<html class="no-js" lang="en">
 <head>
 
 
@@ -58,8 +58,8 @@
 
                 <p>and this page has been viewed <a id="counter"></a> times :) </p>
                 <ul class="social">
-                    <li><a href=""><i class="fa fa-github"></i></a></li>
-                    <li><a href=""><i class="fa fa-linkden"></i></a></li>
+                    <li><a href="https://github.com/aquasnoop7/Medley-Azure-Resume"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://linkedin.com/in/dion-medley-507660240"><i class="fa fa-linkden"></i></a></li>
 
 
 
@@ -83,7 +83,7 @@
             
             <div class="three-columns">
 
-                <img class="profile.pc"  scr="" alt="" />
+                <img class="profile-pc"  scr="images/profilepicture.jpeg" alt="" />
 
             </div>
 
@@ -96,7 +96,7 @@
 
             </br>
         </br>
-        I created this website as part of my portfolio to demonstrate my proficiency in HTML and cloud technologies. This site provides access to my projects on GitHub and links to my social media profiles. <span><a href=""></a></span>    
+        I created this website as part of my portfolio to demonstrate my proficiency in HTML and cloud technologies. This site provides access to my projects on GitHub and links to my social media profiles. <span><a href="https://github.com/aquasnoop7/Medley-Azure-Resume"></a></span>    
 
 
             </div>
@@ -168,7 +168,7 @@
                     <div class="twelve columns">
 
                         <h3>Arise Company LLC</h3>
-                        <p class="info">Computer Technician<span>&bull;</span>Mar 2019 - Aug 2023</p>
+                        <p class="info">Computer Technician<span>&bull;</span>Mar 2019 - Aug 2022</p>
 
                         <p>
                             <li> Respond to customers’ complaints and suggestions in accordance with company policy.</li>
@@ -198,6 +198,10 @@
                     <div class="twelve columns">
                         <p>
                         <li> Fast Learner</li>
+                        <li>Cloud Computing(Azure)</li>
+                        <li>Azure HCI Software</li>
+                        <li>Azure Cosmos DB</li>
+                        <li>Containeization and Orchestration(Docker , Kubernetes)</li>
                         <li>Problem Solver</li>
                         <li> MS Office Suite</li>
                         <li>Wireshark and other tools for TCP/IP packet capture analysis</li>
@@ -207,10 +211,11 @@
                         <li>Server and appliance</li>
                         <li>virtualization using VMware, MS Hyper-V, and KVM</li>
                         <li>VPN support</li>
+                        <li>Git</li>
                         <li> Network Support</li>
                         <li>A/V Setup</li>
                         <li>Remote office software</li>
-                        <li>Python, Swift, Html</li>
+                        <li>Automation Scipting</li>
                         <li> Microsoft Dynamics 365</li>
                         <li>Microsoft Power BI</li>
                         
@@ -222,19 +227,36 @@
         ß
     </section>
 
+    <footer>
+        <div class="row">
+            <div class="twelve columns">
+                <ul class="social-links">
+                    <li><a href="https://github.com/aquasnoop7/Medley-Azure-Resume"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://linkedin.com/in/dion-medley-507660240"><i class="fa fa-linkden"></i></a></li>
+
+                </ul>
+
+                <ul class="copyright">
+                    <a href="https://wwwstyleshout.com/free-templates/ceevee/"> Template by CeeVee</a>
+                </ul>
+            </div>
+            <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
         </div>
 
+    </footer>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
+    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
 
-
-
-
-
-
-
-
-    </section>
+    <script src="js/jquery.flexslider.js"></script>
+    <script src="js/waypoint.js"></script>
+    <script src="js/jquery.filltext.js"></script>
+    <script src="js/magnific-popup.js"></script>
+    <script src="js/init.js"></script>
 
 
 
 </body>
+
+</html>
